--- a/day4/templates/login.html
+++ b/day4/templates/login.html
@@ -21,7 +21,7 @@
 						<form action=""  method="POST">
 							
 							<div class="form_text_ipt" style="box-shadow: rgb(187, 187, 187) 0px 0px 3px;">
-								<input name="username" type="text" placeholder="手机号/邮箱">
+								<input name="username" type="text" placeholder="用户名">
 							</div>
 							<div class="ececk_warning"><span>数据不能为空</span></div>
 							<div class="form_text_ipt">
