--- a/day8/app/templates/login.html
+++ b/day8/app/templates/login.html
@@ -37,6 +37,7 @@
     <script src="/static/js/jquery-2.1.1.js"></script>
     <script src="/static/pulgin/sweetalert-master/dist/sweetalert.min.js"></script>        
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/Validform_v5.3.2_min.js"></script>
 
 <script>
 //alert("welcome jquery")
